--- a/index.html
+++ b/index.html
@@ -1008,13 +1008,31 @@
             
                 <ul>
                     <li class="clickable" data-city="juin">
-                        Hugo in Chemnitz !
-                        <img src="images/mai/hugo.png" width="300">
+                        Anomalie Art Club - Berlin
+                        <img src="images/juin/aac.png" width="280">
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">AAC - Out 10am (sober)</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juin/aac2.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        Anomalie Art Club - out2 10am
+                        <img src="images/juin/aac3.png" width="380">
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        Anomalie Art Club - French Guys
+                        <img src="images/juin/anoma.png" width="700">
                     </li>
                     <li class="clickable" data-city="avril">    
                         <section id="video-section">
                             <div class="clickable">
-                                <p class="video-title">OOTD !</p>
+                                <p class="video-title">Beer pong géant !</p>
                                 <video id="monVideo" controls>
                                     <source src="images/juin/beer.mp4" type="video/mp4">
                                 </video>
@@ -1028,15 +1046,125 @@
 
                 <p class="affichage">HIVE FESTIVAL</p>
                 <ul>
-                    <li>
+                    <li class="clickable" data-city="juin">
+                        Anomalie Art Club - French Guys
+                        <img src="images/juin/hive2.png" width="420">
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        Anomalie Art Club - French Guys
+                        <img src="images/juin/hive3.png" width="420">
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        Anomalie Art Club - French Guys
+                        <img src="images/juin/hive4.png" width="320">
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        Anomalie Art Club - French Guys
+                        <img src="images/juin/hive8.png" width="420">
+                    </li>
+                    <li class="clickable" data-city="juin">
                         <section id="video-section">
                             <div class="clickable">
-                                <p class="video-title">Hive Festival - Chemnitz</p>
+                                <p class="video-title">Hive Festival - Outfit !</p>
                                 <video id="monVideo" controls>
                                     <source src="images/juin/hive.mp4" type="video/mp4">
                                 </video>
                             </div>
                         </section>
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juin/hive5.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>  
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juin/hive6.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juin/hive7.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juin/hive9.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juin/hive10.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juin/hive11.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juin/hive12.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juin/hive13.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juin/hive14.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juin">
+                        Anomalie Art Club - French Guys
+                        <img src="images/juin/hive15.png" width="300">
                     </li>
                 </ul>
             </section>
