--- a/index.html
+++ b/index.html
@@ -1047,26 +1047,26 @@
                 <p class="affichage">HIVE FESTIVAL</p>
                 <ul>
                     <li class="clickable" data-city="juin">
-                        Anomalie Art Club - French Guys
+                        Hive scene
                         <img src="images/juin/hive2.png" width="420">
                     </li>
                     <li class="clickable" data-city="juin">
-                        Anomalie Art Club - French Guys
+                        Hive scene !
                         <img src="images/juin/hive3.png" width="420">
                     </li>
                     <li class="clickable" data-city="juin">
-                        Anomalie Art Club - French Guys
+                        Hive random cool girl
                         <img src="images/juin/hive4.png" width="320">
                     </li>
                     <li class="clickable" data-city="juin">
-                        Anomalie Art Club - French Guys
+                        Hive night scene !!!
                         <img src="images/juin/hive8.png" width="420">
                     </li>
                     <li class="clickable" data-city="juin">
                         <section id="video-section">
-                            <div class="clickable">
+                            <div class="clickable" id ="blurOverlay">
                                 <p class="video-title">Hive Festival - Outfit !</p>
-                                <video id="monVideo" controls>
+                                <video id="monVideo" controls onclick="demanderMotDePasse('monVideo', 'videoPassword')">
                                     <source src="images/juin/hive.mp4" type="video/mp4">
                                 </video>
                             </div>
@@ -1075,19 +1075,9 @@
                     <li class="clickable" data-city="juin">
                         <section id="video-section">
                             <div class="clickable">
-                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <p class="video-title">Hive Main Scene</p>
                                 <video id="monVideo" controls>
-                                    <source src="images/juin/hive5.mp4" type="video/mp4">
-                                </video>
-                            </div>
-                        </section>  
-                    </li>
-                    <li class="clickable" data-city="juin">
-                        <section id="video-section">
-                            <div class="clickable">
-                                <p class="video-title">Hive Festival - Outfit !</p>
-                                <video id="monVideo" controls>
-                                    <source src="images/juin/hive6.mp4" type="video/mp4">
+                                    <source id="maVideo" src="images/juin/hive6.mp4" type="video/mp4">
                                 </video>
                             </div>
                         </section>
@@ -1095,17 +1085,18 @@
                     <li class="clickable" data-city="juin">
                         <section id="video-section">
                             <div class="clickable">
-                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <p class="video-title">psytrance scene omgg</p>
                                 <video id="monVideo" controls>
-                                    <source src="images/juin/hive7.mp4" type="video/mp4">
+                                    <source id="maVideo" src="images/juin/hive7.mp4" type="video/mp4">
                                 </video>
+                                
                             </div>
                         </section>
                     </li>
                     <li class="clickable" data-city="juin">
                         <section id="video-section">
                             <div class="clickable">
-                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <p class="video-title">MAD DOG</p>
                                 <video id="monVideo" controls>
                                     <source src="images/juin/hive9.mp4" type="video/mp4">
                                 </video>
@@ -1115,7 +1106,7 @@
                     <li class="clickable" data-city="juin">
                         <section id="video-section">
                             <div class="clickable">
-                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <p class="video-title">MAD DOG</p>
                                 <video id="monVideo" controls>
                                     <source src="images/juin/hive10.mp4" type="video/mp4">
                                 </video>
@@ -1125,7 +1116,7 @@
                     <li class="clickable" data-city="juin">
                         <section id="video-section">
                             <div class="clickable">
-                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <p class="video-title">ANGERFIST</p>
                                 <video id="monVideo" controls>
                                     <source src="images/juin/hive11.mp4" type="video/mp4">
                                 </video>
@@ -1135,7 +1126,7 @@
                     <li class="clickable" data-city="juin">
                         <section id="video-section">
                             <div class="clickable">
-                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <p class="video-title">ANGERFIST</p>
                                 <video id="monVideo" controls>
                                     <source src="images/juin/hive12.mp4" type="video/mp4">
                                 </video>
@@ -1145,7 +1136,7 @@
                     <li class="clickable" data-city="juin">
                         <section id="video-section">
                             <div class="clickable">
-                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <p class="video-title">ANGERFIST</p>
                                 <video id="monVideo" controls>
                                     <source src="images/juin/hive13.mp4" type="video/mp4">
                                 </video>
@@ -1155,7 +1146,7 @@
                     <li class="clickable" data-city="juin">
                         <section id="video-section">
                             <div class="clickable">
-                                <p class="video-title">Hive Festival - Outfit !</p>
+                                <p class="video-title">dancing sunday</p>
                                 <video id="monVideo" controls>
                                     <source src="images/juin/hive14.mp4" type="video/mp4">
                                 </video>
@@ -1163,10 +1154,11 @@
                         </section>
                     </li>
                     <li class="clickable" data-city="juin">
-                        Anomalie Art Club - French Guys
+                        Hive leaving - thx for the memories
                         <img src="images/juin/hive15.png" width="300">
                     </li>
                 </ul>
+                
             </section>
 
             <!-- JUILLET -->
