final erasmus love u

--- a/index.html
+++ b/index.html
@@ -1166,11 +1166,177 @@
                 <div class="title-container">
                     <h2 class="title">Juillet</h2>
                 </div>
-                    <p class="affichage">photos</p>
+                <p class="affichage">Gera - best date ever with PIERRE THE ORANGE </p>
             
                 <ul>   
-                    <li class="clickable">    
-                        <img src="images/mars/1.png" width="300">
+                    <li class="clickable" data-city="juillet"> 
+                        Église de Gera   
+                        <img src="images/juillet/gera.png" width="350">
+                    </li>
+                    <li class="clickable" data-city="juillet">   
+                        chardonnay date 
+                        <img src="images/juillet/gera2.png" width="270">
+                    </li>
+                    <li class="clickable" data-city="juillet"> 
+                        beautiful guy   
+                        <img src="images/juillet/gera5.png" width="270">
+                    </li>
+                    <li class="clickable" data-city="juillet"> 
+                        best date ever   
+                        <img src="images/juillet/gera4.png" width="350">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        beautiful sunset
+                        <img src="images/juillet/gera3.png" width="350">
+                    </li>
+                </ul>
+
+                <p class="affichage">CSD-B JULIE ASTRID LUCIEN JE VOUS AIME</p>
+                <ul>    
+                    <li class="clickable" data-city="juillet">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Gay pride !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juillet/csd2.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juillet">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Gay pride 2 !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juillet/csd3.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juillet">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Gay pride 3 !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juillet/csd7.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juillet">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Gay pride 4 !</p>
+                                <video id="monVideo" controls>
+                                    <source src="images/juillet/csd4.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juillet">
+                        <section id="video-section">
+                            <div class="clickable">
+                                <p class="video-title">Gay pride 5 !</p>
+                                <video id="maVideo" controls>
+                                    <source src="images/juillet/csd5.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </section>
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        love u
+                        <img src="images/juillet/csd6.png" width="500">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        still love u
+                        <img src="images/juillet/csd10.png" width="400">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        so happy to be here
+                        <img src="images/juillet/csd9.png" width="350">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        2 beautiful people 
+                        <img src="images/juillet/csd8.png" width="1200">
+                    </li>
+                    <li class="clickable" data-city="juillet">   
+                        best team !! 
+                        <img src="images/juillet/csd11.png" width="400">
+                    </li>
+                    <li class="clickable" data-city="juillet"> 
+                        still best team !!   
+                        <img src="images/juillet/csd12.png" width="700">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        thx astrid ^^
+                        <img src="images/juillet/csd13.png" width="400">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        lets go party in BERLIN
+                        <img src="images/juillet/csd14.png" width="400">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        after techno eheh
+                        <img src="images/juillet/csd15.png" width="400">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        beautiful people 
+                        <img src="images/juillet/csd16.png" width="150">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        love u guys omg
+                        <img src="images/juillet/csd17.png" width="450">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        lucien chillin
+                        <img src="images/juillet/csd18.png" width="450">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        best sunset in best city
+                        <img src="images/juillet/csd19.png" width="400">
+                    </li>
+                    <li class="clickable" data-city="juillet">
+                        see u guys love u    
+                        <img src="images/juillet/csd20.png" width="700">
+                    </li>
+                </ul>
+                <p class="affichage">last goodbye - ERASMUS GUYS (love u)</p>
+                <ul>
+                    <li class="clickable" data-city="juillet">    
+                        chillin iin chemnitz
+                        <img src="images/juillet/ju.png" width="400">
+                    </li>
+                    <li class="clickable" data-city="juillet">
+                        love u korean girl
+                        <img src="images/juillet/ju2.png" width="400">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        me ^^
+                        <img src="images/juillet/ju4.png" width="300">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        turkish and korean
+                        <img src="images/juillet/ju3.png" width="550">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        everyone omg
+                        <img src="images/juillet/ju5.png" width="550">
+                    </li>
+                    <li class="clickable" data-city="juillet">   
+                        my beautiful korean girls 
+                        <img src="images/juillet/ju8.png" width="300">
+                    </li>
+                    <li class="clickable" data-city="juillet">    
+                        miss u
+                        <img src="images/juillet/ju7.png" width="300">
+                    </li>
+                    <li class="clickable" data-city="juillet">   
+                        still miss u
+                        <img src="images/juillet/ju6.png" width="550">
+                    </li>
+                    <li class="clickable" data-city="juillet"> 
+                        thx for this erasmus, really   
+                        <img src="images/juillet/ju9.png" width="550">
                     </li>
                 </ul>
             </section>
